--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
   <head>
     <title>Backstop Media - Backbone.js</title>
+    <script src='vendor/underscore.js'></script>
+    <script src='vendor/backbone.js'></script>
   </head>
 
   <body>
