--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 
   <head>
     <title>Backstop Media - Backbone.js</title>
+    <link href='index.css' rel='stylesheet' type='text/css'>
     <script src='vendor/underscore.js'></script>
     <script src='vendor/backbone.js'></script>
+    <script src='vendor/jquery.js'></script>
+    <script src='index.js'></script>
+    <script src='models/issue.js'></script>
+    <script src='views/issue.js'></script>
   </head>
 
   <body>
