--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <script src='vendor/backbone.js'></script>
     <script src='index.js'></script>
     <script src='sync.js'></script>
-    <script src='models/issue.js'></script>
-    <script src='views/issue.js'></script>
+    <script src='../models/_model.js'></script>
+    <script src='../models/_collection.js'></script>
+    <script src='../models/issue.js'></script>
+    <script src='../views/_view.js'></script>
+    <script src='../views/issue.js'></script>
   </head>
 
   <body>
