--- a/test/index.html
+++ b/test/index.html
@@ -14,18 +14,16 @@
     <script src="../vendor/backbone.js"></script>
     <script src='../index.js'></script>
     <script src='../sync.js'></script>
+    <script src='../models/_model.js'></script>
+    <script src='../models/_collection.js'></script>
     <script src='../models/issue.js'></script>
+    <script src='../views/_view.js'></script>
     <script src='../views/issue.js'></script>
     <script src="index.js"></script>
   </head>
 
   <body>
     <div id="qunit"></div>
-    <div id="qunit-fixture">
-      <div id='testElement'>
-        <h1>Test</h1>
-      </div>
-    </div>
   </body>
 
 </html>
