--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,9 @@
     <script src='../sync.js'></script>
     <script src='../models/_model.js'></script>
     <script src='../models/_collection.js'></script>
+    <script src='../models/user.js'></script>
+    <script src='../models/org.js'></script>
+    <script src='../models/repo.js'></script>
     <script src='../models/issue.js'></script>
     <script src='../views/_view.js'></script>
     <script src='../views/issue.js'></script>
