Remove debug code, rename, GH doesn't like _file.js

--- a/test/index.html
+++ b/test/index.html
@@ -14,13 +14,13 @@
     <script src="../vendor/backbone.js"></script>
     <script src='../index.js'></script>
     <script src='../sync.js'></script>
-    <script src='../models/_model.js'></script>
-    <script src='../models/_collection.js'></script>
+    <script src='../models/model.js'></script>
+    <script src='../models/collection.js'></script>
     <script src='../models/user.js'></script>
     <script src='../models/org.js'></script>
     <script src='../models/repo.js'></script>
     <script src='../models/issue.js'></script>
-    <script src='../views/_view.js'></script>
+    <script src='../views/view.js'></script>
     <script src='../views/issue.js'></script>
     <script src="index.js"></script>
   </head>
