--- a/test/index.html
+++ b/test/index.html
@@ -15,8 +15,8 @@
     <script src='../index.js'></script>
     <script src='../sync.js'></script>
     <script src='../models/model.js'></script>
+    <script src='../models/board.js'></script>
     <script src='../models/user.js'></script>
-    <script src='../models/org.js'></script>
     <script src='../models/repo.js'></script>
     <script src='../models/issue.js'></script>
     <script src='../views/view.js'></script>
