Small rename for consistency

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script id='js-main-view-template' type='text/template'>
       <input id='js-add-input'><button id='js-add-button'>Add</button>
       <div id='js-message' class='box'>
-        Please enter an owner or owner/repo combo.
+        Please enter a user or user/repo combo.
       </div>
     </script>
   </head>
