create distinct SidebarView

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <script src='models/issue.js'></script>
     <script src='views/view.js'></script>
     <script src='views/main.js'></script>
+    <script src='views/sidebar.js'></script>
     <script src='views/issue.js'></script>
     <script id='js-main-view-template' type='text/template'>
-      <input id='js-add-input'><button id='js-add-button'>Add</button>
-      <div id='js-message' class='box'>
-        Please enter a user or user/repo combo.
+      <div id='js-sidebar'>
+        <input id='js-add-input'><button id='js-add-button'>Add</button>
+        <div id='js-message' class='box'>
+          Please enter a user or user/repo combo.
+        </div>
       </div>
     </script>
     <script id='js-search-results-template' type='text/template'>
