--- a/index.html
+++ b/index.html
@@ -5,21 +5,7 @@
   <head>
     <title>Backstop Media - Backbone.js</title>
     <link href='index.css' rel='stylesheet' type='text/css'>
-    <script src='vendor/json2.js'></script>
-    <script src='vendor/jquery.js'></script>
-    <script src='vendor/underscore.js'></script>
-    <script src='vendor/backbone.js'></script>
-    <script src='index.js'></script>
-    <script src='sync.js'></script>
-    <script src='models/model.js'></script>
-    <script src='models/board.js'></script>
-    <script src='models/user.js'></script>
-    <script src='models/repo.js'></script>
-    <script src='models/issue.js'></script>
-    <script src='views/view.js'></script>
-    <script src='views/main.js'></script>
-    <script src='views/sidebar.js'></script>
-    <script src='views/issue.js'></script>
+    <!-- place templates above models so we don't need to wait for DOMReady to retrieve them -->
     <script id='js-main-view-template' type='text/template'>
       <div id='js-sidebar'>
         <input id='js-add-input'><button id='js-add-button'>Add</button>
@@ -38,6 +24,32 @@
         <% }); %>
       </ul>
     </script>
+    <script id='js-issue-list-template' type='text/template'>
+      <h2><%= title %></h2>
+      <ul>
+        <% _.each(issues, function (issue) { %>
+          <li>
+            <%= issue.displayName() %>
+          </li>
+        <% }); %>
+      </ul>
+    </script>
+    <script src='vendor/json2.js'></script>
+    <script src='vendor/jquery.js'></script>
+    <script src='vendor/underscore.js'></script>
+    <script src='vendor/backbone.js'></script>
+    <script src='index.js'></script>
+    <script src='sync.js'></script>
+    <script src='models/model.js'></script>
+    <script src='models/board.js'></script>
+    <script src='models/user.js'></script>
+    <script src='models/repo.js'></script>
+    <script src='models/issue.js'></script>
+    <script src='views/view.js'></script>
+    <script src='views/main.js'></script>
+    <script src='views/sidebar.js'></script>
+    <script src='views/issue-list.js'></script>
+    <script src='views/issue.js'></script>
   </head>
 
   <body>
