--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
           <li>
             <a href='<%- issue.get('html_url') %>'>
               <%- issue.displayName() %>
-            </a>
+            </a><br>
+            <%= markdown.toHTML(issue.get('body')) %>
           </li>
         <% }); %>
       </ul>
     </script>
     <script src='vendor/json2.js'></script>
     <script src='vendor/jquery.js'></script>
+    <script src='vendor/markdown.js'></script>
     <script src='vendor/underscore.js'></script>
     <script src='vendor/backbone.js'></script>
     <script src='index.js'></script>
