--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <title>Backstop Media - Backbone.js</title>
+    <link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <link href='index.css' rel='stylesheet' type='text/css'>
     <!-- place templates above models so we don't need to wait for DOMReady to retrieve them -->
     <script id='js-main-view-template' type='text/template'>
@@ -15,7 +16,7 @@
       </div>
     </script>
     <script id='js-search-results-template' type='text/template'>
-      Found:
+      <h4>Found:</h4>
       <ul>
         <% repos.each(function (repo) { %>
           <li>
@@ -37,6 +38,35 @@
         <% }); %>
       </ul>
     </script>
+    <script id='js-repo-list-template' type='text/template'>
+        <% repos.each(function (repo) { %>
+        <li> <%- repo.displayName() %>
+          <a data-repo-id='<%= repo.id %>' class='js-repo-remove btn btn-danger btn-small'>Remove</a>
+        </li>
+        <% }); %>
+    </script>
+    <script id='js-welcome-template' type='text/template'>
+      <div class='span6'>
+        <p>This example Backbone App allows you to prioritise and manage issues from several
+          Github repo's on a Kanban style board.</p>
+        <p>Github data is read from the public api and your priorities are saved to local storage.</p>
+        <p>Start by adding repos. Please enter either a username or a username/repo below:</p>
+        <form class='form-search'>
+          <input type='text' placeholder='documentcloud/backbone' id='js-add-input' />
+          <button id='js-add-button' class='btn'>Find</button>
+        </form>
+        <div id='js-message' class='alert'></div>
+        <div class='well' id='js-repo-search-list'>
+        </div>
+      </div>
+      <div class='span6'>
+        <div class='well' id='js-your-repo-list'>
+          <h4>Your Repos</h4>
+        </div>
+        <p>After adding repos, click next to start managing the issues.</p>
+        <a href='#manage' class='btn btn-large btn-primary'>Next</a>
+      </div>
+    </script>
     <script src='vendor/json2.js'></script>
     <script src='vendor/jquery.js'></script>
     <script src='vendor/marked.js'></script>
@@ -53,9 +83,15 @@
     <script src='views/main.js'></script>
     <script src='views/sidebar.js'></script>
     <script src='views/issue-list.js'></script>
+    <script src='views/repo-list.js'></script>
     <script src='views/issue.js'></script>
+    <script src='views/welcome.js'></script>
+    <script src='routers/router.js'></script>
   </head>
 
   <body>
+  <div class="container-fluid" id="app-container">
+    <h2>Backbone Kanban Issues App</h2>
+  </div>
   </body>
 </html>
