minor HTML cleanup

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script id='js-welcome-template' type='text/template'>
       <div class='span6'>
         <p>This example Backbone App allows you to prioritise and manage issues from several
-          Github repo's on a Kanban style board.</p>
+          Github repos on a Kanban style board.</p>
         <p>Github data is read from the public api and your priorities are saved to local storage.</p>
         <p>Start by adding repos. Please enter either a username or a username/repo below:</p>
         <form class='form-search'>
@@ -67,12 +67,8 @@
         <a href='#manage' class='btn btn-large btn-primary'>Next</a>
       </div>
     </script>
-
     <script id='js-manage-template' type='text/template'>
       <div class="span2" id=''></div>
-
-
-
     </script>
 
     <script src='vendor/json2.js'></script>
@@ -102,4 +98,5 @@
     <h2>Backbone Kanban Issues App</h2>
   </div>
   </body>
+
 </html>
