move primary stylesheet under css/

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Backstop Media - Backbone.js</title>
     <link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-    <link href='index.css' rel='stylesheet' type='text/css'>
+    <link href='css/index.css' rel='stylesheet' type='text/css'>
     <!-- place templates above models so we don't need to wait for DOMReady to retrieve them -->
     <script id='js-search-results-template' type='text/template'>
       <h4>Found:</h4>
