change title to Hubbub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>Backstop Media - Backbone.js</title>
+    <title>Hubbub - Backbone.js Example App from Backstop Media</title>
     <link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <link href='css/index.css' rel='stylesheet' type='text/css'>
     <!-- place templates above models so we don't need to wait for DOMReady to retrieve them -->
@@ -115,7 +115,7 @@
 
   <body>
   <div class="container-fluid" id="app-container">
-    <h2>Backbone Kanban Issues App</h2>
+    <h2>Hubbub</h2>
   </div>
   </body>
 
