--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset='utf8'>
-    <title>Backstop Media - Backbone.js Test Suite</title>
+    <title>Hubbub Test Suite - Backstop Media</title>
     <link rel="stylesheet" href="../vendor/qunit.css" type="text/css">
     <script>window.ENV = 'test'</script>
     <script src="../vendor/json2.js"></script>
