--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class='modal-mask'>
         <div class='modal'>
           <div class='modal-header'>
-            <a href='<%- issue.get('html_url') %>'>
+            <a target='_blank' href='<%- issue.get('html_url') %>'>
               <div class='modal-top-line'>
                 <div class='issue-repo'>
                   <%- issue.repo.displayName() %>
@@ -64,6 +64,14 @@
           <a data-repo-id='<%= repo.id %>' class='js-repo-remove btn btn-danger btn-small'>Remove</a>
         </li>
         <% }); %>
+    </script>
+    <script id='js-repo-filter-list-template' type='text/template'>
+      <% repos.each(function (repo) { %>
+      <label class="checkbox">
+        <input type="checkbox" name="repoFilter"  value='<%- repo.id %>' checked >
+        <%- repo.displayName() %>
+      </label>
+      <% }); %>
     </script>
     <script id='js-welcome-template' type='text/template'>
       <div class='span6'>
