use unminified Bootstrap CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <title>Hubbub - Backbone.js Example App from Backstop Media</title>
-    <link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+    <link href='css/bootstrap.css' rel='stylesheet' type='text/css'>
     <link href='css/index.css' rel='stylesheet' type='text/css'>
     <!-- place templates above models so we don't need to wait for DOMReady to retrieve them -->
     <script id='js-search-results-template' type='text/template'>
