--- a/index.html
+++ b/index.html
@@ -67,13 +67,24 @@
       <% }); %>
     </script>
     <script id='js-sidebar-template' type='text/template'>
-      <% repos.each(function (repo) { %>
-        <label class="checkbox">
-          <input type="checkbox" name="repoFilter"  value='<%- repo.id %>' checked >
-          <%- repo.displayName() %>
-        </label>
-      <% }); %>
+      <div class='repo-search'>
+        <form class='form-search'>
+          <input type='text' placeholder='documentcloud/backbone' id='js-add-input' />
+          <button id='js-add-button' class='btn'>Find</button>
+        </form>
+        <div id='js-message' class='alert'></div>
+        <div class='well' id='js-repo-search-list'></div>
+      </div>
+      <div class='repo-filter'>
+        <% repos.each(function (repo) { %>
+          <label class="checkbox">
+            <input type="checkbox" name="repoFilter"  value='<%- repo.id %>' checked >
+            <%- repo.displayName() %>
+          </label>
+        <% }); %>
+      </div>
     </script>
+    <!-- TODO remove -->
     <script id='js-welcome-template' type='text/template'>
       <div class='span6'>
         <p>This example Backbone App allows you to prioritise and manage issues from several
@@ -86,7 +97,7 @@
         </form>
         <div id='js-message' class='alert'></div>
         <div class='well' id='js-repo-search-list'>
-        </div>
+      </div>
       </div>
       <div class='span6'>
         <div class='well' id='js-your-repo-list'>
@@ -95,9 +106,6 @@
         <p>After adding repos, click next to start managing the issues.</p>
         <a href='#manage' class='btn btn-large btn-primary'>Next</a>
       </div>
-    </script>
-    <script id='js-manage-template' type='text/template'>
-      <div class="span2" id=''></div>
     </script>
 
     <script src='vendor/json2.js'></script>
