--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <script src='views/sidebar.js'></script>
     <script src='views/issue-list.js'></script>
     <script src='views/repo-list.js'></script>
+    <script src='views/modal.js'></script>
     <script src='views/issue-modal.js'></script>
     <script src='views/welcome.js'></script>
     <script src='routers/router.js'></script>
