hide empty message/result boxes in sidebar

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <input type='text' placeholder='documentcloud/backbone' id='js-add-input' />
           <button id='js-add-button' class='btn'>Find</button>
         </form>
-        <div id='js-message' class='alert'></div>
-        <div class='well' id='js-repo-search-list'></div>
+        <div id='js-message' class='alert empty'></div>
+        <div class='well empty' id='js-repo-search-list'></div>
       </div>
       <div class='repo-filter'>
         <% repos.each(function (repo) { %>
