--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <h3>Welcome To Hubbub</h3>
           </div>
           <div class='modal-body'>
-            <p>This example Backbone App allows you to prioritise and manage issues from several
-              Github repos on a Kanban style board.</p>
-            <p>Github data is read from the public api and your priorities are saved to local storage.</p>
+            <p>This example Backbone App allows you to prioritize and manage issues from several
+              GitHub repos on a Kanban style board.</p>
+            <p>GitHub data is read from the public API and your priorities are saved to local storage.</p>
           </div>
           <div class='modal-footer'>
             <button class='btn exit'>Close</button>
