Filters still broken, but almost fixed

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
     <script src='views/modal.js'></script>
     <script src='views/issue-modal.js'></script>
     <script src='views/welcome-modal.js'></script>
+    <script src='views/list.js'></script>
+    <script src='views/repo-filter-item.js'></script>
     <script src='routers/router.js'></script>
   </head>
 
