create repo filter tag programmatically

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div id='js-message' class='alert empty'></div>
         <div class='well empty' id='js-repo-search-list'></div>
       </div>
-      <ul class='js-repo-filter'></ul>
+      <!-- filter view will be injected here -->
     </script>
 
     <script id='js-repo-filter-item-template' type='text/template'>
