started work on breaking out models/collections

--- a/index.html
+++ b/index.html
@@ -106,17 +106,27 @@
     </script>
 
 
+    <!-- Vendor. -->
     <script src='vendor/marked.js'></script>
     <script src='vendor/jquery.js'></script>
     <script src='vendor/underscore.js'></script>
     <script src='vendor/backbone.js'></script>
+
+    <!-- Application. -->
     <script src='index.js'></script>
     <script src='sync.js'></script>
-    <script src='models/model.js'></script>
+
+    <!-- Models. -->
     <script src='models/board.js'></script>
     <script src='models/user.js'></script>
     <script src='models/repo.js'></script>
     <script src='models/issue.js'></script>
+
+    <!-- Collections. -->
+    <script src='collections/board.js'></script>
+    <script src='collections/issue.js'></script>
+
+    <!-- Views. -->
     <script src='views/view.js'></script>
     <script src='views/main.js'></script>
     <script src='views/sidebar.js'></script>
@@ -127,6 +137,8 @@
     <script src='views/welcome-modal.js'></script>
     <script src='views/list.js'></script>
     <script src='views/repo-filter-item.js'></script>
+
+    <!-- Routers. -->
     <script src='routers/router.js'></script>
   </head>
 
