--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,6 @@
     <title>Hubbub Test Suite - Backstop Media</title>
     <link rel="stylesheet" href="../vendor/qunit.css" type="text/css">
     <script>window.ENV = 'test'</script>
-    <script src="../vendor/json2.js"></script>
     <script src="../vendor/jquery.js"></script>
     <script src="../vendor/qunit.js"></script>
     <script src="../vendor/underscore.js"></script>
@@ -19,8 +18,7 @@
     <script src='../models/user.js'></script>
     <script src='../models/repo.js'></script>
     <script src='../models/issue.js'></script>
-    <script src='../views/view.js'></script>
-    <script src='../views/issue.js'></script>
+    <script src='../collections/issue.js'></script>
     <script src="index.js"></script>
   </head>
 
