Adding generic tests to use in the book

--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
     <script src='../views/view.js'></script>
     <script src='../views/issue.js'></script>
     <script src="index.js"></script>
+    <script src="generic.js"></script>
   </head>
 
   <body>
