--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,8 @@
     <script src='../models/user.js'></script>
     <script src='../models/repo.js'></script>
     <script src='../models/issue.js'></script>
+    <script src='../collections/board.js'></script>
+    <script src='../collections/issue.js'></script>
     <script src='../views/view.js'></script>
     <script src='../views/issue.js'></script>
     <script src="index.js"></script>
