--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
     </script>
 
     <script id='js-repo-filter-item-template' type='text/template'>
-      <input type='checkbox' checked> <%- repo.displayName() %></label>
+      <input type='checkbox' <%= repo.get('isActive') ? ' checked' : '' %>>
+        <%- repo.displayName() %>
+      </label>
       <i class='js-refresh icon-refresh'></i>
       <i class='js-remove icon-remove'></i>
     </script>
