--- a/index.html
+++ b/index.html
@@ -119,12 +119,11 @@
 
     <!-- Models. -->
     <script src='models/board.js'></script>
-    <script src='models/user.js'></script>
     <script src='models/repo.js'></script>
     <script src='models/issue.js'></script>
 
     <!-- Collections. -->
-    <script src='collections/board.js'></script>
+    <script src='collections/repo.js'></script>
     <script src='collections/issue.js'></script>
 
     <!-- Views. -->
