Adding some more generic tests

--- a/test/index.html
+++ b/test/index.html
@@ -7,21 +7,20 @@
     <title>Hubbub Test Suite - Backstop Media</title>
     <link rel="stylesheet" href="../vendor/qunit.css" type="text/css">
     <script>window.ENV = 'test'</script>
-    <script src="../vendor/json2.js"></script>
     <script src="../vendor/jquery.js"></script>
     <script src="../vendor/qunit.js"></script>
     <script src="../vendor/underscore.js"></script>
     <script src="../vendor/backbone.js"></script>
     <script src='../index.js'></script>
     <script src='../sync.js'></script>
-    <script src='../models/model.js'></script>
     <script src='../models/board.js'></script>
-    <script src='../models/user.js'></script>
     <script src='../models/repo.js'></script>
     <script src='../models/issue.js'></script>
+    <script src='../collections/issue.js'></script>
+    <script src='../collections/repo.js'></script>
     <script src='../views/view.js'></script>
-    <script src='../views/issue.js'></script>
     <script src="index.js"></script>
+    <script src="generic.js"></script>
   </head>
 
   <body>
