Make welcome message opt-out

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
             <p>GitHub data is read from the public API and your priorities are saved to local storage.</p>
           </div>
           <div class='modal-footer'>
+            <label class='toggle-show-welcome-label'>
+              <input type='checkbox' class='js-toggle-show-welcome' checked>
+              Show this welcome message on start up.
+            </label>
             <button class='btn exit'>Close</button>
           </div>
         </div>
