move router up to top of directory, since there's only one of them

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
     <script src='views/list.js'></script>
     <script src='views/repo-filter-item.js'></script>
 
-    <!-- Routers. -->
-    <script src='routers/router.js'></script>
+    <!-- Router. -->
+    <script src='router.js'></script>
   </head>
 
   <body>
