change #issue/:id to #issues/:id to be more RESTful, and add a #issue route as an alias for the root

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul></ul>
     </script>
     <script id='js-issue-item-template' type='text/template'>
-      <a href='#issue/<%- issue.id %>'>
+      <a href='#issues/<%- issue.id %>'>
         <strong>
           <%- issue.repo.displayName() %>#<%- issue.get('number') %>
         </strong>
