--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     <script id='js-sidebar-template' type='text/template'>
       <div class='repo-search'>
         <form class='form-search js-repo-search-form'>
-          <label for='js-add-input'>Find a user or user/repo</label>
-          <input type='text' placeholder='documentcloud/backbone' id='js-add-input'>
+          <label for='js-repo-search-input'>Find a user or user/repo</label>
+          <input type='text' placeholder='documentcloud/backbone' id='js-repo-search-input'>
         </form>
         <div id='js-message' class='alert empty'></div>
         <div class='well empty' id='js-repo-search-list'></div>
