create separate View for repo search - closes #30

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     <script src='views/sidebar.js'></script>
     <script src='views/list.js'></script>
     <script src='views/item.js'></script>
+    <script src='views/repo-search.js'></script>
     <script src='views/issue-holder.js'></script>
     <script src='views/issue-list.js'></script>
     <script src='views/modal.js'></script>
