Add Google Analytics tracking code

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
 
     <!-- Router. -->
     <script src='router.js'></script>
+
+    <!-- Google Analytics Tracking Code -->
+    <script src='google-analytics.js'></script>
   </head>
 
   <body>
