--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
     <script src='../models/issue.js'></script>
     <script src='../collections/issue.js'></script>
     <script src='../collections/repo.js'></script>
-    <script src="index.js"></script>
+    <script src="hubbub.js"></script>
     <script src="generic.js"></script>
   </head>
 
