include ListView in boilerplate

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Collections go here. -->
 
     <!-- Views go here. -->
+    <script src='views/list.js'></script>
 
     <!-- Router goes here. -->
   </head>
